--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@types/react": "^18.2.24",
     "@types/react-dom": "^18.2.8",
     "axios": "^1.5.1",
+    "chart.js": "^4.4.0",
     "msw": "^1.3.2",
     "papaparse": "^5.4.1",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.16.0",
