--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@nivo/line": "^0.84.0",
     "@reduxjs/toolkit": "^1.9.6",
     "@tanstack/react-query": "^5.0.0-rc.4",
     "@testing-library/jest-dom": "^5.17.0",
