--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "@types/react": "^18.2.24",
     "@types/react-dom": "^18.2.8",
     "axios": "^1.5.1",
+    "d3": "6.3.1",
+    "echarts": "^5.4.3",
+    "echarts-for-react": "^3.0.2",
     "msw": "^1.3.2",
     "papaparse": "^5.4.1",
     "react": "^18.2.0",
@@ -22,6 +25,7 @@
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
     "react-spinners": "^0.13.8",
+    "styled-components": "5.2.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
