--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-dom": "^18.2.8",
     "axios": "^1.5.1",
     "chart.js": "^4.4.0",
+    "d3": "^7.8.5",
     "msw": "^1.3.2",
     "papaparse": "^5.4.1",
     "react": "^18.2.0",
@@ -23,6 +24,7 @@
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
     "react-spinners": "^0.13.8",
+    "styled-components": "^6.1.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
@@ -47,6 +49,8 @@
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@tanstack/eslint-plugin-query": "^5.0.0-rc.4",
-    "@types/papaparse": "^5.3.9"
+    "@types/papaparse": "^5.3.9",
+    "babel-plugin-macros": "^3.1.0",
+    "babel-plugin-styled-components": "^2.1.4"
   }
 }
