--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react": "^18.2.24",
     "@types/react-dom": "^18.2.8",
     "axios": "^1.5.1",
+    "chart.js": "^4.4.0",
     "d3": "6.3.1",
     "echarts": "^5.4.3",
     "echarts-for-react": "^3.0.2",
@@ -21,6 +22,7 @@
     "msw": "^1.3.2",
     "papaparse": "^5.4.1",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-intersection-observer": "^9.5.3",
     "react-redux": "^8.1.3",
