--- a/package.json
+++ b/package.json
@@ -19,15 +19,20 @@
     "echarts": "^5.4.3",
     "echarts-for-react": "^3.0.2",
     "framer-motion": "^10.16.9",
+    "leaflet": "^1.9.4",
+    "leaflet-control-geocoder": "^2.4.0",
     "msw": "^1.3.2",
     "papaparse": "^5.4.1",
     "react": "^18.2.0",
+    "react-animated-numbers": "^0.17.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-intersection-observer": "^9.5.3",
+    "react-leaflet": "^4.2.1",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
+    "react-select": "^5.8.0",
     "react-spinners": "^0.13.8",
     "styled-components": "^6.1.1",
     "typescript": "^4.9.5",
